fix: Unify file path separators and improve extraction permission settings.